--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       </nav>
     </header>
   </div>
+  <div>
+    <h2>Handcrafted, home-made masterpieces</h2>
+    <form action="https://www.freecodecamp.com/email-submit" id="forma">
+      <input id="email" type="Email" placeholder="Enter Your Email">
+    </form>
+    <button>Get Started</button>
+  </div>
 </body>
 
 </html>
