--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="#" id="Feature">Feature</a></li>
-          <li><a href="#" id="How it Works">How it Works</a></li>
+          <li><a href="#" id="How-it-Works">How it Works</a></li>
           <li><a href="#" id="Pricing">Pricing</a></li>
         </ul>
       </nav>
@@ -29,6 +29,56 @@
     </form>
     <button>Get Started</button>
   </div>
+
+  <div>
+
+    <section>
+      <div>
+        <div>
+          <div>
+            <div><i class="fa fa-3x fa-fire"></i></div>
+            <h2>
+              Premium Materials</h2>
+            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your
+              purchase.</p>
+          </div>
+
+        </div>
+
+        <div>
+          <div>
+            <div><i class="fa fa-3x fa-truck"></i></div>
+            <h2>
+              Fast Shipping</h2>
+            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free
+              returns if you are not satisfied.</p>
+          </div>
+
+        </div>
+
+        <div>
+          <div>
+            <div><i class="fa fa-3x fa-battery"></i></div>
+            <h2>
+              Quality Assurance</h2>
+            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the
+              pitch of your instrument.</p>
+          </div>
+
+        </div>
+
+
+    </section>
+
+
+    <section id="How-it-Works">
+      <iframe id="video" height="315" src="https://youtu.be/y8Yv4pnO7qc" frameborder="0" allowfullscreen></iframe>
+
+    </section>
+  </div>
+
+
+
 </body>
 
 </html>
