--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
     </section>
 
 
+
     <section id="How-it-Works">
-      <iframe id="video" height="315" src="https://youtu.be/y8Yv4pnO7qc" frameborder="0" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc"
+        title="Roman Carnival Overture Op. 9 for Five Trombones" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
 
     </section>
   </div>
