--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
         allowfullscreen></iframe>
 
     </section>
+
+
+
+
+
+
+
+
+
+    <footer>
+      <ul>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <p>Copyright 2016, Original Trombones</p>
+
+    </footer>
   </div>
 
 
